Do some gradle incremental detection for #2